@@ -1,3 +1,13 @@
+2011-06-08  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r88365.
+        http://trac.webkit.org/changeset/88365
+        https://bugs.webkit.org/show_bug.cgi?id=62301
+
+        windows bots broken (Requested by loislo_ on #webkit).
+
+        * JavaScriptCore.exp:
+
 2011-06-08  Ryan Sleevi  <rsleevi@chromium.org>
 
         Reviewed by Tony Chang.
